# inkfish

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
src/: main.ts  shims.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
