[package]
name = "inkfish"
version = "0.1.0"
description = "GFM / Mermaid / Marp 対応の軽量 Markdown ビューアー"
authors = ["kakusuke"]
edition = "2021"
license = "MIT"

[lib]
name = "inkfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
shell-words = "1"
