[package]
name = "inkfish"
version = "0.1.2"
description = "GFM / Mermaid / Marp 対応の軽量 Markdown ビューアー"
authors = ["kakusuke"]
edition = "2021"
license = "MIT"

[lib]
name = "inkfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
shell-words = "1"

# PDF 書き出し (WKWebView.createPDF) のための Objective-C ブリッジ
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }

# PDF 書き出し (WebView2.PrintToPdf) のための WebView2 COM バインディング。
# バージョンは wry (webview2-com 0.38 / windows 0.61) に合わせて型を一致させる。
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

# PDF 書き出し (WebKitPrintOperation) のための GTK/WebKit バインディング。
# バージョンは wry (webkit2gtk 2.0 / gtk 0.18) に合わせる。
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
